--- a/tasks/composer.yml
+++ b/tasks/composer.yml
@@ -19,6 +19,7 @@
     php composer-installer.php
   args:
     chdir: "/tmp"
+    executable: "/bin/bash"
   when: not composer_bin.stat.exists
 
 - name: Move Composer into globally-accessible location.
